syntax = "proto3";
package vote_service;
option go_package = "/vote_service";

import "google/api/annotations.proto";

service VoteService {

  rpc Vote(VoteRequest) returns (VoteResponse) {
    option (google.api.http) = {
      post: "/v1/vote"
      body: "user"
    };
  }
}

message VoteRequest {
  int32 user_id = 1;
  bytes cypher_vote = 2;
}

message VoteResponse {
  enum VoteStatus {
    Accepted = 0; // The vote was accepted
    Cancelled = 1; // The vote was cancelled
  }
  VoteStatus status = 1;
}